rtgc-17+Nov-12 opt anchor-list